force-app/main/default/objects/ContentVersion/fields/Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Date__c</fullName>
    <description>Date to Archive File</description>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>