force-app/main/default/objects/ContentVersion/fields/archiveFile__c.field-meta.xml
<CustomField>
    <fullName>archiveFile__c</fullName>
    <formula>Archive_Date__c &lt; today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>archiveFile</label>
    <type>Checkbox</type>
</CustomField>