force-app/main/default/objects/ContentVersion/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Webinars/Videos</fullName>
            </value>
            <value>
                <fullName>Scenario Images</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
            <value>
                <fullName>Interactive Learning</fullName>
                <isActive>false</isActive>
                <label>Interactive Learning</label>
            </value>
            <value>
                <fullName>Newsletters</fullName>
                <isActive>false</isActive>
                <label>Newsletters</label>
            </value>
            <value>
                <fullName>Promos</fullName>
                <isActive>false</isActive>
                <label>Promos</label>
            </value>
            <value>
                <fullName>Sell Sheets</fullName>
                <isActive>false</isActive>
                <label>Sell Sheets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>