force-app/main/default/objects/ContentVersion/fields/ignoreTrigger__c.field-meta.xml
<CustomField>
    <fullName>ignoreTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ignoreTrigger</label>
    <type>Checkbox</type>
</CustomField>