force-app/main/default/objects/ContentVersion/fields/Library__c.field-meta.xml
<CustomField>
    <fullName>Library__c</fullName>
    <description>Not all libraries are listed. Instead this is a list of secured libraries that GSC /Admin needs to move files to.</description>
    <label>Move to Secure Library</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>W9</fullName>
            </value>
            <value>
                <fullName>Partner Portal Archives</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
                <isActive>false</isActive>
                <label>PR</label>
            </value>
            <value>
                <fullName>Promo</fullName>
                <isActive>false</isActive>
                <label>Promo</label>
            </value>
            <value>
                <fullName>Reseller Certification</fullName>
                <isActive>false</isActive>
                <label>Reseller Certification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>